---------------------------------------------------------------------------------------------------
Version: 0.0.12
Date: 2020.07.XX
  Features:
    - Added function "clear_icon_specification"
  Changes:
    - Modifed function "store_icon" to handle data-updates as well
---------------------------------------------------------------------------------------------------
Version: 0.0.11
Date: 2020.07.15
  Changes:
    - Revised tier label icons, 32px is now more clear
    - Revised how equipment icon backgrounds are handled
    - Added support for a 6th tier, currently disabled
    - Enhanced mod setting names and descriptions with rich text; tier labels are now displayed next to their respective option
    - Renamed "ingredients"-based tier mapping to "progression"-based tier mapping, and improved the clarity of the setting description
    - Removed files and code relating to target drone utility
---------------------------------------------------------------------------------------------------
Version: 0.0.10
Date: 2020.07.13
  Features:
    - Added customized version of "make_4way_animation_from_spritesheet"
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 2020.07.11
  Changes:
    - Code improvements; ensured variables are locally defined
    - Tier labels now have borders on the left
    - Tier labels have been improved at 16x and 8x pixel sizes for clarity
---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: 2020.07.06
  Features:
    - Added function "rescale_remnant"
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2020.06.24
  Changes:
    - Reverted previous change in 0.0.6
    - Sets icon_size and icon_mipmaps at every entry within an icons table when icons are assigned